gap and help scroll fix

--- a/gutenberg/collapsible.css
+++ b/gutenberg/collapsible.css
@@ -152,6 +152,7 @@ input[type='checkbox'] {
 .overlay:target {
   visibility: visible;
   opacity: 1;
+  overflow: auto;
 }
 
 .popup {
