--- a/gutenberg/style.css
+++ b/gutenberg/style.css
@@ -630,7 +630,7 @@ footer */
 	position: absolute;
 	left: 0;
 	right: 0;
-	bottom: 0;
+	bottom: -32px;
 	text-align: center;
 	font-size: 0.9em;
 	width: 100%;
